--- a/Python/Python_base/Python04; list, tuple, in operator.ipynb
+++ b/Python/Python_base/Python04; list, tuple, in operator.ipynb
@@ -841,7 +841,8 @@
    "source": [
     "### 📎 튜플 unpacking\n",
     "- 튜플에서 가장 중요하다\n",
-    "- 나중에 함수 단원에서 반환값을 여러개로 지정할때 매우 유용하게 사용된다"
+    "- 나중에 함수 단원에서 반환값을 여러개로 지정할때 매우 유용하게 사용된다\n",
+    "- 정의 : Unpacking in Python refers to an operation that consists of assigning an iterable of values to a tuple (or list) of variables in a single assignment statement."
    ]
   },
   {
@@ -892,6 +893,25 @@
     "print(type(b))\n",
     "print(c)\n",
     "print(type(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 이런것도 되긴한다 \n",
+    "[a,b,c] = [1,2,3]\n",
+    "print(a,b,c)"
    ]
   },
   {
@@ -950,6 +970,7 @@
    ],
    "source": [
     "# iterable객체는 자동으로 tuple unpacking이 된다\n",
+    "\n",
     "a,b,c,d=range(4)\n",
     "print(a,b,c,d)\n",
     "\n",
@@ -964,6 +985,29 @@
     "# too many values to unpack (expected 4)\n",
     "# 혹은  not enough values to unpack (expected 4, got 3)\n",
     "a,b,c,d= 'abe'\n",
+    "print(a,b,c,d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a b ['c', 'd'] e\n",
+      "a ['b', 'c'] d e\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 길이가 같지 않아도 되게 할 수 있다\n",
+    "a,b,*c,d= 'abcde'\n",
+    "print(a,b,c,d)\n",
+    "\n",
+    "a,*b,c,d= 'abcde'\n",
     "print(a,b,c,d)"
    ]
   },
