--- a/Python/Python_base/Python08; function, lambda, module.ipynb
+++ b/Python/Python_base/Python08; function, lambda, module.ipynb
@@ -494,7 +494,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 📎Module\n",
+    "### 📎Module and Package\n",
     "- .py 스크립트 파일 하나를 파이썬 에서는 모듈이라고 부른다\n",
     "- 모듈 안에는 각종 변수 함수 클래스가 있을수 있다\n",
     "- 패키지는 여러 모듈을 엮은것이다\n"
@@ -504,15 +504,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### module 가져오기"
+    "#### 1. module 및 module에 정의된 변수,함수,객체 가져오기\n",
+    "- import module\n",
+    "- import module1,module2\n",
+    "- import module.변수\n",
+    "- import module.함수\n",
+    "- import module.클래스\n",
+    "- import package.module\n",
+    "- ,,, 여러가지 가능"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. from ; from 을 사용해서 부분적으로 가져올수 있다\n",
+    "- from module import *\n",
+    "- from package import module\n",
+    "- from package.module import 함수\n",
+    "- from package.module import 함수,변수,클래스,,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ⭐️ 마지막에 무엇을 정확히 import 했느냐에 따라 접근이 다르다"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math        # 모듈을 import \n",
+    "math.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import * # 모듈 안에 전부 다 import\n",
+    "pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<urllib.request.Request at 0x7fda823ae2b0>"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import urllib     # package전체 import\n",
+    "urllib.request.Request('http://www.google.com') # package.module.func"
+   ]
   }
  ],
  "metadata": {
