--- a/Python/Python_base/Python04; list, tuple, in operator, map.ipynb
+++ b/Python/Python_base/Python04; list, tuple, in operator, map.ipynb
@@ -762,6 +762,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Map function\n",
+    "- iterable 객체에 다 사용가능하다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list01 = list(range(10))\n",
+    "map(lambda x:x**2,list01) # map 타입으로 돌려준다 => 이를 내가 원하는 iterbale 객체로 받을수 있다\n",
+    "list02 = list(map(lambda x:x**2,list01))\n",
+    "tuple02 = tuple(map(lambda x:x**2,list01))\n",
+    "str02 = ''.join(list(map(str,list01)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a;', 'b;', 'c;', 'd;', 'e;', 'f;', 'g;']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str01 = 'abcdefg'\n",
+    "list(map(lambda x:x+';',str01)) # 얼마든지 자유자제로 가능하다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### tuple 타입의 특징\n",
     "- seqential type이다\n",
     "- immutbale 객체\n",
