--- a/Python/Python_base/Python08; function, scope, lambda, module.ipynb
+++ b/Python/Python_base/Python08; function, scope, lambda, module.ipynb
@@ -393,7 +393,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### lambda expression\n",
+    "### 📎Scope"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 📎lambda expression\n",
     "- lambda 인자 : 구현부"
    ]
   },
@@ -434,6 +448,16 @@
    "source": [
     "# 바로 사용도 가능하다\n",
     "(lambda x : x**2)(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lambda안에 조건문 사용하기\n",
+    "# 반드시 if else 형식이어야 한다"
    ]
   },
   {
