--- a/Python/Python_data_science/Numpy01; ndarray, ndarray creation, reshape.ipynb
+++ b/Python/Python_data_science/Numpy01; ndarray, ndarray creation, reshape.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numpy01; ndarray, ndarray creation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -22,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Provides\n",
+    "#### Provides\n",
     "  1. An array object of arbitrary homogeneous items\n",
     "  2. Fast mathematical operations over arrays\n",
     "  3. Linear Algebra, Fourier Transforms, Random Number Generation\n"
