--- a/Python/Python_data_science/Numpy01; ndarray, ndarray creation, reshape.ipynb
+++ b/Python/Python_data_science/Numpy01; ndarray, ndarray creation, reshape.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,29 @@
    "metadata": {},
    "source": [
     "#### 1.python의 데이터 타입 활용\n",
-    "- np.array(내장 데이터 타입) 함수를 이용한다"
+    "- np.array(내장 데이터 타입) 함수를 이용한다\n",
+    "- 기본적으로 list, tuple, range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 차원이 없는 스칼라 값이다\n",
+    "# 그냥 궁금해서 해봤다\n",
+    "print(np.array(1))\n",
+    "print(type(np.array(1)))\n"
    ]
   },
   {
@@ -304,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -313,14 +335,20 @@
      "text": [
       "[[ 2  3  4  5  6]\n",
       " [ 4  5  6  7  8]\n",
-      " [ 6  7  8  9 10]]\n"
+      " [ 6  7  8  9 10]]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
      ]
     }
    ],
    "source": [
     "# nested 데이터 타입은 자동으로 다차원으로 인식한다\n",
     "ndarray01 = np.array([range(i,i+5) for i in [2,4,6]])\n",
-    "print(ndarray01) "
+    "print(ndarray01) \n",
+    "\n",
+    "ndarray02 = np.array([(1,2,3),[4,5,6],(7,8,9)])\n",
+    "print(ndarray02)"
    ]
   },
   {
@@ -384,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
