--- a/R/R_basic/R04 ; matrix,array,names.ipynb
+++ b/R/R_basic/R04 ; matrix,array,names.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "resistant-auction",
    "metadata": {},
    "source": [
     "## R04 ; 행렬 , 배열\n",
@@ -12,7 +11,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "false-transparency",
    "metadata": {},
    "source": [
     "### 행렬 생성하는 방법\n",
@@ -24,7 +22,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "meaningful-observation",
    "metadata": {},
    "source": [
     "#### 1.dim() \n",
@@ -35,7 +32,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "endless-feedback",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +74,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proper-richardson",
    "metadata": {},
    "source": [
     "#### 2.matrix(x,nrow,ncol,dimnames=NULL,byrow=F)\n",
@@ -91,7 +86,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "after-holly",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +160,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "guided-sewing",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +235,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "unlimited-sheet",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +286,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "wrapped-airline",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +339,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "loving-finance",
    "metadata": {},
    "source": [
     "####  3.rbind() , cbind()"
@@ -357,7 +347,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "radical-milton",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +425,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "welsh-binding",
    "metadata": {},
    "source": [
     "#### rbind() cbind()를 통해 벡터와 행렬, 행렬과 행렬도 결합할수 있다"
@@ -445,7 +433,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "subsequent-tissue",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +525,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "greek-nightmare",
    "metadata": {},
    "source": [
     "#### 단일 값으로 행렬을 다 채울 수도 있다"
@@ -547,7 +533,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "found-protection",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +621,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "floppy-promise",
    "metadata": {},
    "source": [
     "### 행렬의 인덱싱\n",
@@ -648,7 +632,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "serious-spank",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +805,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quick-shoulder",
    "metadata": {},
    "source": [
     "#### 인덱싱을 일차원의 데이터는 벡터로 출력된다\n",
@@ -832,7 +814,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "functional-flexibility",
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +892,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "further-active",
    "metadata": {},
    "source": [
     "### 행렬의 연산\n",
@@ -932,7 +912,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "missing-tuition",
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +995,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "exact-branch",
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1150,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "beginning-ending",
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1197,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "brutal-hunger",
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1301,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "homeless-overview",
    "metadata": {},
    "outputs": [
     {
@@ -2088,7 +2063,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "experimental-complaint",
    "metadata": {},
    "source": [
     "### R에서 배열은 크게 중요하지 않다"
@@ -2096,7 +2070,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "electoral-karaoke",
    "metadata": {},
    "source": [
     "### 배열 생성하는 법 \n",
@@ -2106,233 +2079,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "instrumental-front",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<ol class=list-inline>\n",
-       "\t<li>1</li>\n",
-       "\t<li>2</li>\n",
-       "\t<li>3</li>\n",
-       "\t<li>4</li>\n",
-       "\t<li>5</li>\n",
-       "\t<li>6</li>\n",
-       "\t<li>7</li>\n",
-       "\t<li>8</li>\n",
-       "\t<li>9</li>\n",
-       "\t<li>10</li>\n",
-       "\t<li>11</li>\n",
-       "\t<li>12</li>\n",
-       "\t<li>13</li>\n",
-       "\t<li>14</li>\n",
-       "\t<li>15</li>\n",
-       "\t<li>16</li>\n",
-       "\t<li>17</li>\n",
-       "\t<li>18</li>\n",
-       "\t<li>19</li>\n",
-       "\t<li>20</li>\n",
-       "\t<li>21</li>\n",
-       "\t<li>22</li>\n",
-       "\t<li>23</li>\n",
-       "\t<li>24</li>\n",
-       "</ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 1\n",
-       "\\item 2\n",
-       "\\item 3\n",
-       "\\item 4\n",
-       "\\item 5\n",
-       "\\item 6\n",
-       "\\item 7\n",
-       "\\item 8\n",
-       "\\item 9\n",
-       "\\item 10\n",
-       "\\item 11\n",
-       "\\item 12\n",
-       "\\item 13\n",
-       "\\item 14\n",
-       "\\item 15\n",
-       "\\item 16\n",
-       "\\item 17\n",
-       "\\item 18\n",
-       "\\item 19\n",
-       "\\item 20\n",
-       "\\item 21\n",
-       "\\item 22\n",
-       "\\item 23\n",
-       "\\item 24\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 1\n",
-       "2. 2\n",
-       "3. 3\n",
-       "4. 4\n",
-       "5. 5\n",
-       "6. 6\n",
-       "7. 7\n",
-       "8. 8\n",
-       "9. 9\n",
-       "10. 10\n",
-       "11. 11\n",
-       "12. 12\n",
-       "13. 13\n",
-       "14. 14\n",
-       "15. 15\n",
-       "16. 16\n",
-       "17. 17\n",
-       "18. 18\n",
-       "19. 19\n",
-       "20. 20\n",
-       "21. 21\n",
-       "22. 22\n",
-       "23. 23\n",
-       "24. 24\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       ", , 1\n",
-       "\n",
-       "     [,1] [,2] [,3] [,4]\n",
-       "[1,]    1    4    7   10\n",
-       "[2,]    2    5    8   11\n",
-       "[3,]    3    6    9   12\n",
-       "\n",
-       ", , 2\n",
-       "\n",
-       "     [,1] [,2] [,3] [,4]\n",
-       "[1,]   13   16   19   22\n",
-       "[2,]   14   17   20   23\n",
-       "[3,]   15   18   21   24\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<ol class=list-inline>\n",
-       "\t<li>1</li>\n",
-       "\t<li>2</li>\n",
-       "\t<li>3</li>\n",
-       "\t<li>4</li>\n",
-       "\t<li>5</li>\n",
-       "\t<li>6</li>\n",
-       "\t<li>7</li>\n",
-       "\t<li>8</li>\n",
-       "\t<li>9</li>\n",
-       "\t<li>10</li>\n",
-       "\t<li>11</li>\n",
-       "\t<li>12</li>\n",
-       "\t<li>13</li>\n",
-       "\t<li>14</li>\n",
-       "\t<li>15</li>\n",
-       "\t<li>16</li>\n",
-       "\t<li>17</li>\n",
-       "\t<li>18</li>\n",
-       "\t<li>19</li>\n",
-       "\t<li>20</li>\n",
-       "\t<li>21</li>\n",
-       "\t<li>22</li>\n",
-       "\t<li>23</li>\n",
-       "\t<li>24</li>\n",
-       "</ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 1\n",
-       "\\item 2\n",
-       "\\item 3\n",
-       "\\item 4\n",
-       "\\item 5\n",
-       "\\item 6\n",
-       "\\item 7\n",
-       "\\item 8\n",
-       "\\item 9\n",
-       "\\item 10\n",
-       "\\item 11\n",
-       "\\item 12\n",
-       "\\item 13\n",
-       "\\item 14\n",
-       "\\item 15\n",
-       "\\item 16\n",
-       "\\item 17\n",
-       "\\item 18\n",
-       "\\item 19\n",
-       "\\item 20\n",
-       "\\item 21\n",
-       "\\item 22\n",
-       "\\item 23\n",
-       "\\item 24\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 1\n",
-       "2. 2\n",
-       "3. 3\n",
-       "4. 4\n",
-       "5. 5\n",
-       "6. 6\n",
-       "7. 7\n",
-       "8. 8\n",
-       "9. 9\n",
-       "10. 10\n",
-       "11. 11\n",
-       "12. 12\n",
-       "13. 13\n",
-       "14. 14\n",
-       "15. 15\n",
-       "16. 16\n",
-       "17. 17\n",
-       "18. 18\n",
-       "19. 19\n",
-       "20. 20\n",
-       "21. 21\n",
-       "22. 22\n",
-       "23. 23\n",
-       "24. 24\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       ", , 1\n",
-       "\n",
-       "     [,1] [,2] [,3] [,4]\n",
-       "[1,]    1    4    7   10\n",
-       "[2,]    2    5    8   11\n",
-       "[3,]    3    6    9   12\n",
-       "\n",
-       ", , 2\n",
-       "\n",
-       "     [,1] [,2] [,3] [,4]\n",
-       "[1,]   13   16   19   22\n",
-       "[2,]   14   17   20   23\n",
-       "[3,]   15   18   21   24\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ", , 1\n",
+      "\n",
+      "     [,1] [,2] [,3] [,4]\n",
+      "[1,]    1    4    7   10\n",
+      "[2,]    2    5    8   11\n",
+      "[3,]    3    6    9   12\n",
+      "\n",
+      ", , 2\n",
+      "\n",
+      "     [,1] [,2] [,3] [,4]\n",
+      "[1,]   13   16   19   22\n",
+      "[2,]   14   17   20   23\n",
+      "[3,]   15   18   21   24\n",
+      "\n",
+      ", , 1\n",
+      "\n",
+      "     [,1] [,2] [,3] [,4]\n",
+      "[1,]    1    4    7   10\n",
+      "[2,]    2    5    8   11\n",
+      "[3,]    3    6    9   12\n",
+      "\n",
+      ", , 2\n",
+      "\n",
+      "     [,1] [,2] [,3] [,4]\n",
+      "[1,]   13   16   19   22\n",
+      "[2,]   14   17   20   23\n",
+      "[3,]   15   18   21   24\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "#jupyter notebook에서 표현이 안되네 ㅎ\n",
     "arr01<-c(1:24)\n",
     "dim(arr01)<-c(3,4,2)\n",
-    "arr01\n",
+    "print(arr01)\n",
     "arr02<-array(1:24,dim=c(3,4,2))\n",
-    "arr02"
+    "print(arr02)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "miniature-tamil",
    "metadata": {},
    "source": [
     "### Names 함수들\n",
@@ -2349,7 +2144,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "individual-cancellation",
    "metadata": {},
    "outputs": [
     {
@@ -2372,7 +2166,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "standing-nothing",
    "metadata": {},
    "outputs": [
     {
@@ -2504,7 +2297,6 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "binding-scene",
    "metadata": {},
    "outputs": [
     {
@@ -2720,7 +2512,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "divided-emperor",
    "metadata": {},
    "source": [
     "####  dimension이 강제로 변경된 경우\n",
@@ -2733,7 +2524,6 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ultimate-reconstruction",
    "metadata": {},
    "outputs": [
     {
@@ -2890,7 +2680,6 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "fundamental-southwest",
    "metadata": {},
    "outputs": [
     {
@@ -3015,7 +2804,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.1"
+   "version": "4.1.0"
   }
  },
  "nbformat": 4,
