--- a/Python/Python_data_science/Numpy03; reshape,flatten,ravel,concatenate, split .ipynb
+++ b/Python/Python_data_science/Numpy03; reshape,flatten,ravel,concatenate, split .ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,8 +279,8 @@
    "metadata": {},
    "source": [
     "### ⭐️ravel vs flatten\n",
-    "- ravel 은 view의 개념이다 => 원본 데이터 영향 x\n",
-    "- flatten 은 copy다 => 원본 데이터 영향 o"
+    "- ravel 은 view의 개념이다 => 원본 데이터 영향 o\n",
+    "- flatten 은 copy다 => 원본 데이터 영향 x"
    ]
   },
   {
@@ -310,14 +310,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
+      "[1000    1    2    3    4    5    6    7    8    9   10   11   12   13\n",
+      "   14]\n",
       "[[ 0  1  2  3  4]\n",
       " [ 5  6  7  8  9]\n",
       " [10 11 12 13 14]]\n"
@@ -327,6 +328,7 @@
    "source": [
     "ndarray01 = np.arange(15).reshape(3,5)\n",
     "temp = ndarray01.flatten()\n",
+    "temp[0]=1000\n",
     "print(temp)\n",
     "print(ndarray01)"
    ]
