--- a/Python/Python_data_science/np01.ipynb
+++ b/Python/Python_data_science/np01.ipynb
@@ -452,9 +452,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### fancy indexing\n",
-    "- boolean mask indexing\n",
-    "- integer list indexing (정수 배열 인덱싱)"
+    "- ### fancy indexing  \n",
+    "    - integer list indexing (정수 배열 인덱싱)\n",
+    "- ### bool indexing\n",
+    "    - boolean mask indexing\n"
    ]
   },
   {
