--- a/Python/Python_data_science/Numpy03; reshape, newaxis, flatten, ravel.ipynb
+++ b/Python/Python_data_science/Numpy03; reshape, newaxis, flatten, ravel.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Numpy03; reshape,flatten,ravel,concatenate, split "
+    "## Numpy03; reshape,flatten,ravel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,6 +154,78 @@
    "source": [
     "ndarray01 = np.arange(15)\n",
     "print(ndarray01.reshape(3,5,order='F'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### newaxis\n",
+    "- 1D 의 ndarray를 row_vector col_vector로 사용하기 싶을때 자주 사용된다\n",
+    "\n",
+    "- newaxis를 shape(,,,) 안에서 추가하고싶은 차원에 쓰자 => 그럼 차원이 추간된다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]]\n",
+      "[[1]\n",
+      " [2]\n",
+      " [3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([1,2,3])\n",
+    "# (,3) => (1,3)\n",
+    "print(x[np.newaxis,:])\n",
+    "\n",
+    "# (,3) => (3,1)\n",
+    "print(x[:,np.newaxis])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 2 3]\n",
+      "  [4 5 6]]]\n",
+      "[[[1 2 3]]\n",
+      "\n",
+      " [[4 5 6]]]\n",
+      "[[[1]\n",
+      "  [2]\n",
+      "  [3]]\n",
+      "\n",
+      " [[4]\n",
+      "  [5]\n",
+      "  [6]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([[1,2,3],[4,5,6]])\n",
+    "\n",
+    "# (2,3) => (1,2,3)\n",
+    "print(x[np.newaxis,:]) \n",
+    "\n",
+    "# (2,3) => (2,1,3)\n",
+    "print(x[:,np.newaxis])\n",
+    "\n",
+    "# (2,3) => (2,3,1)\n",
+    "print(x[:,:,np.newaxis])"
    ]
   },
   {
