--- a/Python/Python_data_science/Numpy06; bool indexing, fancy indexing.ipynb
+++ b/Python/Python_data_science/Numpy06; bool indexing, fancy indexing.ipynb
@@ -1,11 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### bool indexing\n",
+    "- bool mask로 indexing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### fancy indexing\n",
+    "- 정수 배열을 인덱스로 활용"
+   ]
   }
  ],
  "metadata": {
